Update: Change publish status.

--- a/_posts/2020-12-07-mac-mini-2020.md
+++ b/_posts/2020-12-07-mac-mini-2020.md
@@ -7,7 +7,7 @@ tags:
 - Mac mini
 - OSX
 date: 2020-12-07
-published: false
+published: true
 ---
 
 ![Mac mini 2020](/assets/2020-12-07/IMG_2222.jpeg)  
